@@ -1,1 +1,0 @@
-debian/testing/xpcshell-package-tests/data/locale-matchOS-test-addon.xpi
