@@ -1,33 +1,37 @@
 Cu.import("resource://gre/modules/AddonManager.jsm");
+Cu.import("resource://gre/modules/FileUtils.jsm");
 
 function run_test()
 {
   do_check_true(!!_TEST_SELECTED_LOCALE);
   _XPCSHELL_PROCESS = "child-" + Cc["@mozilla.org/process/environment;1"].getService(Ci.nsIEnvironment).get("LC_ALL");
 
-  createAppInfo("xpcshell@tests.mozilla.org", "XPCShell", "1", "1");
-  Services.prefs.setCharPref("extensions.minCompatibleAppVersion", "0.1");
+  let appIni = Services.dirsvc.get("CurProcD", Ci.nsIFile);
+  appIni.append("application.ini");
+
+  let parser = Components.manager.getClassObjectByContractID("@mozilla.org/xpcom/ini-parser-factory;1", Ci.nsIINIParserFactory).createINIParser(appIni);
+
+  createAppInfo(parser.getString("App", "ID"), parser.getString("App", "Name"), parser.getString("App", "Version"), parser.getString("Gecko", "MaxVersion"));
 
   Cc["@mozilla.org/addons/integration;1"].getService(Ci.nsIObserver).observe(null, "addons-startup", null);
 
-  do_test_pending();
+  // We've started the addon manager, but need to manually register addon chrome
+  // for non-restartless addons. This is normally handled in
+  // toolkit/xre/nsXREDirProvider.cpp, which is not available to xpcshell. When
+  // we use restartless language packs, this can go away
+  let extensions_ini = Services.dirsvc.get("ProfD", Ci.nsIFile);
+  extensions_ini.append("extensions.ini");
 
-  AddonManager.getInstallForFile(do_get_file("data/locale-matchOS-test-addon.xpi"),
-                                 function(install) {
-    install.addListener({
-      onInstallEnded: function(install, addon) {
-        do_execute_soon(function() {
-          do_check_eq(Cc["@mozilla.org/chrome/chrome-registry;1"].getService(Ci.nsIXULChromeRegistry).getSelectedLocale("test"), _TEST_SELECTED_LOCALE);
+  let re = /langpack-[a-zA-Z\-]+@firefox.mozilla.org.xpi/;
+  parser = Components.manager.getClassObjectByContractID("@mozilla.org/xpcom/ini-parser-factory;1", Ci.nsIINIParserFactory).createINIParser(extensions_ini);
+  let e = parser.getKeys("ExtensionDirs");
+  while (e.hasMore()) {
+    let k = e.getNext();
+    let file = new FileUtils.File(parser.getString("ExtensionDirs", k));
+    if (file.leafName.match(re)) {
+      Components.manager.addBootstrappedManifestLocation(file);
+    }
+  }
 
-          do_test_finished();
-        });
-      },
-
-      onInstallFailed: function(install) {
-        do_check_true(false);
-        do_test_finished();
-      }
-    });
-    install.install();
-  });
+  do_check_eq(Cc["@mozilla.org/chrome/chrome-registry;1"].getService(Ci.nsIXULChromeRegistry).getSelectedLocale("global"), _TEST_SELECTED_LOCALE);
 }
