@@ -58,6 +58,12 @@ firefox-trunk (21.0~a1~hg20130109r118258-0ubuntu1) UNRELEASED; urgency=low
   * Add a test to make sure language pack chrome is registered correctly
     - add debian/testing/xpcshell-package-tests/test_langpack_chrome.js
     - update debian/testing/xpcshell-package-tests/xpcshell.ini
+  * Refactor test_locale_matchOS.js to use real language packs
+    - update d/t/xpcshell-package-tests/test_locale_matchOS.js
+    - update d/t/xpcshell-package-tests/test_locale_matchOS_real.js
+    - remove d/t/xpcshell-package-tests/data/locale-matchOS-test-addon.xpi
+    - update debian/source/include-binaries
+    - update debian/tests/control
 
  -- Chris Coulson <chris.coulson@canonical.com>  Tue, 08 Jan 2013 00:43:23 +0000
 
